--- a/.github/workflows/main_qvento.yml
+++ b/.github/workflows/main_qvento.yml
@@ -24,6 +24,9 @@ jobs:
 
       - name: Build with dotnet
         run: dotnet build --configuration Release
+        
+      - name: Test with the dotnet CLI
+        run: dotnet test
 
       - name: dotnet publish
         run: dotnet publish -c Release -o ${{env.DOTNET_ROOT}}/myapp
