--- a/QventoAPI/Properties/launchSettings.json
+++ b/QventoAPI/Properties/launchSettings.json
@@ -1,4 +1,4 @@
-{
+﻿{
   "$schema": "https://json.schemastore.org/launchsettings.json",
   "iisSettings": {
     "windowsAuthentication": false,
@@ -16,9 +16,7 @@
       "launchUrl": "swagger",
       "applicationUrl": "https://localhost:7216;http://localhost:5216",
       "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development",
-        "VaultUri": "https://qventovault.vault.azure.net/",
-        "AZURE_USERNAME": "rogelio11903@linkiafp.es"
+        "ASPNETCORE_ENVIRONMENT": "Development"
       }
     },
     "IIS Express": {
@@ -26,9 +24,7 @@
       "launchBrowser": true,
       "launchUrl": "swagger",
       "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development",
-        "VaultUri": "https://qventovault.vault.azure.net/",
-        "AZURE_USERNAME": "rogelio11903@linkiafp.es"
+        "ASPNETCORE_ENVIRONMENT": "Development"
       }
     }
   }
