Fix yaml with credentials

--- a/.github/workflows/tests_pull_request.yml
+++ b/.github/workflows/tests_pull_request.yml
@@ -27,3 +27,8 @@ jobs:
         
       - name: Test with the dotnet CLI
         run: dotnet test
+        with:
+          app-name: 'qvento'
+          slot-name: 'Production'
+          publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_97CF198A6FFC443BA8364ABA90FA7EA6 }}
+          package: .
