--- a/.github/workflows/tests_pull_request.yml
+++ b/.github/workflows/tests_pull_request.yml
@@ -25,10 +25,8 @@ jobs:
       - name: Build with dotnet
         run: dotnet build --configuration Release
         
-      - name: Test with the dotnet CLI
-        run: dotnet test
-        with:
-          app-name: 'qvento'
-          slot-name: 'Production'
-          publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_97CF198A6FFC443BA8364ABA90FA7EA6 }}
-          package: .
+      - task: DotNetCoreCLI@2
+        inputs:
+          command: test
+          projects: '**/*Tests/*.csproj'
+          arguments: '--configuration $(buildConfiguration)'
