--- a/.github/workflows/tests_pull_request.yml
+++ b/.github/workflows/tests_pull_request.yml
@@ -1,7 +1,7 @@
 # Docs for the Azure Web Apps Deploy action: https://github.com/Azure/webapps-deploy
 # More GitHub Actions for Azure: https://github.com/Azure/actions
 
-name: Tests on pull requests
+name: Build and Tests on pull requests
 
 on:
   pull_request:
