--- a/QventoAPI/QventoAPI.csproj
+++ b/QventoAPI/QventoAPI.csproj
@@ -21,6 +21,7 @@
     <PackageReference Include="Azure.Extensions.AspNetCore.Configuration.Secrets" Version="1.0.0" />
     <PackageReference Include="Azure.Identity" Version="1.6.0" />
     <PackageReference Include="Azure.Security.KeyVault.Secrets" Version="4.4.0" />
+    <PackageReference Include="HashLib" Version="2.0.1" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Testing" Version="6.0.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="7.0.0" />
 	<PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="7.0.0" />
